[build-system]
requires = ["setuptools>=61.0", "cython >= 0.26.1", "numpy >= 1.9.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_entropy"
# version = "0.9.1"
dynamic = ["version"]
authors = [{ name = "Yuanyue Li", email = "mail@yli.one" }]
description = "This package provides a Python implementation of calculating spectral entropy, entropy similarity, and Flash entropy search for mass spectrometry data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
keywords = [
    "mass spectrometry",
    "ms entropy",
    "entropy",
    "spectral entropy",
    "entropy similarity",
    "flash entropy",
    "flash entropy similarity",
    "flash entropy search",
]
dependencies = ["numpy >= 1.9.3"]

[project.optional-dependencies]
all = ["lz4 >= 4.3.2", "msgpack >= 1.0.5", "pyteomics >= 4.6"]
gpu = ["cupy >= 12.0.0"]


[project.urls]
"Homepage" = "https://github.com/YuanyueLi/MSEntropy"
"Bug Tracker" = "https://github.com/YuanyueLi/MSEntropy/issues"

[tool.setuptools.dynamic]
version = {attr = "ms_entropy.__version__"}
