[build-system]
requires = ["setuptools>=61.0", "cython >= 0.26.1", "numpy >= 1.9.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_entropy"
dynamic = ["version"]
description = "Python implementation of spectral entropy, entropy similarity, and Flash entropy search for mass spectrometry data."
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Yuanyue Li", email = "yuanyueli@zju.edu.cn" }]
keywords = [
    "mass spectrometry",
    "ms entropy",
    "entropy",
    "spectral entropy",
    "entropy similarity",
    "flash entropy",
    "flash entropy similarity",
    "flash entropy search",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Runtime deps — avoid repeating in requirements.txt/setup.py
dependencies = ["numpy>=1.9.13"]

[project.optional-dependencies]
all = ["lz4>=4.3.2", "msgpack>=1.0.5", "pyteomics>=4.6"]
gpu = ["cupy>=12.0.0"]
dev = ["build", "pytest", "cython >= 0.26.1"]

[project.urls]
Homepage = "https://github.com/YuanyueLi/MSEntropy"
"Bug Tracker" = "https://github.com/YuanyueLi/MSEntropy/issues"

[tool.setuptools]
platforms = ["Linux", "MacOS", "Windows"]

# Use package discovery instead of hardcoding
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "examples", "manuscript", "dist", "build"]

[tool.setuptools.dynamic]
version = { attr = "ms_entropy.__version__" }

# Optional: default cython directives without touching env vars
[tool.cython]
language_level = "3"
boundscheck = false
wraparound = false
cdivision = true
